--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+mainClassName = 'APP'
 
 repositories {
     mavenCentral()
@@ -12,6 +15,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    implementation "com.sparkjava:spark-core:2.6.0"
+    implementation "com.sparkjava:spark-template-handlebars:2.5.5"
+    implementation 'org.slf4j:slf4j-simple:1.7.21'
 }
 
 test {
