--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,23 @@ plugins {
     id 'application'
 }
 
+
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-mainClassName = 'APP'
+mainClassName = 'App'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     implementation "com.sparkjava:spark-core:2.6.0"
     implementation "com.sparkjava:spark-template-handlebars:2.5.5"
     implementation 'org.slf4j:slf4j-simple:1.7.21'
-}
-
-test {
-    useJUnitPlatform()
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
